frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carflix-frontend
  labels:
    app: carflix-frontend
  namespace: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: carflix-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  minReadySeconds: 30
  template:
    metadata:
      labels:
        app: carflix-frontend
    spec:
      containers:
      - image: 261897769841.dkr.ecr.ap-northeast-2.amazonaws.com/carflix-prod-repository:front.v1
        name: carflix-frontend
        ports:
        - containerPort: 8110
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 150Mi
          limits:
            cpu: 150m
            memory: 200Mi
      tolerations:
      - key: "frontend-workload"
        operator: "Equal"
        effect: "NoSchedule"
