frontend/carflix-ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carflix-ingress-frontend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: carflix-ingress
  namespace: frontend
spec:
  rules:
  - host: www.mdscarflix.co.kr
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service: 
              name: carflix-frontend-service
              port: 
                number: 443
